fix core compile error